--- a/index.html
+++ b/index.html
@@ -11,68 +11,66 @@
 
        <style>
     body {
-        margin: 0;
-        padding: 0;
-        font-family: 'Arial, Helvetica', sans-serif;
-        background-color: #f9f5f0;
-        color: #333;
-        text-align: center;
+      margin: 0;
+      padding: 0;
+      font-family: 'Arial, Helvetica', sans-serif
+      background-color: #f9f5f0;
+      color: #333;
+      text-align: center;
         display: flex;
+        flex-direction: column; 
         justify-content: center; 
         align-items: center;     
-        height: 100vh;           
-        flex-direction: column; 
     }
 
     header {
-        background-color: #e3d5ca;
-        padding: 2em 1em;
+      background-color: #e3d5ca;
+      padding: 2em 1em;
     }
 
     h1 {
-        font-family: 'Cormorant', serif;
-        font-size: 2.5em;
-        margin-bottom: 0.2em;
+      font-family: 'cormorant', serif;
+      font-size: 2.5em;
+      margin-bottom: 0.2em;
     }
 
     h2 {
-        font-style: italic;
-        color: #5e503f;
+      font-style: italic;
+      color: #5e503f;
     }
 
     .cover-image {
-        max-width: 100%;
-        height: auto;
-        border: 4px solid #333;
-        margin-bottom: 2em;
+      max-width: 100%;
+      height: auto;
+      border: 4px solid #333;
+      margin-bottom: 2em;
     }
 
     nav a {
-        display: inline-block;
-        margin: 0.5em 1em;
-        text-decoration: none;
-        color: #5e503f;
-        font-weight: bold;
+      display: inline-block;
+      margin: 0.5em 1em;
+      text-decoration: none;
+      color: #5e503f;
+      font-weight: bold;
     }
 
     nav a:hover {
-        text-decoration: underline;
+      text-decoration: underline;
     }
-
-    .nav-container {
-        display: flex;
-        justify-content: center;
-        gap: 1em;
-        flex-wrap: wrap;
-        margin: 1em 0;
-    }
+               .nav-container {
+                display: flex;
+                justify-content: center;
+                gap: 1em;
+                flex-wrap: wrap;
+                margin: 1em 0;
+            }
 
     footer {
-        margin-top: 3em;
-        font-size: 0.8em;
-        color: #777;
+      margin-top: 3em;
+      font-size: 0.8em;
+      color: #777;
     }
-</style>
+        </style>
     </head>
     <body>
     <header>
