--- a/index.html
+++ b/index.html
@@ -49,23 +49,16 @@
       color: #5e503f;
       font-weight: bold;
     }
-
-    nav a:hover {
-      text-decoration: underline;
-    }
-               .nav-container {
-                display: flex;
-                justify-content: center;
-                gap: 1em;
-                flex-wrap: wrap;
-                margin: 1em 0;
-            }
+nav a:hover { text-decoration: underline; } .nav-container { display: flex; justify-content: center; gap: 1em;
+flex-wrap: wrap; margin: 1em 0; }
 
     footer {
       margin-top: 3em;
       font-size: 0.8em;
       color: #777;
     }
+    main { display: flex; justify-content: center; align-items: center; height: 100vh; text-align: center; } main
+     img { max-width: 100%; height: auto; }
         </style>
     </head>
     <body>
